--- a/src/components/Dashboard/Body.module.css
+++ b/src/components/Dashboard/Body.module.css
@@ -1,14 +1,14 @@
- .mainlist{
+ /* .mainlist{
     border: 1px solid orange;
     height: 100vh;
     width: 100vw;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     }
-    /* .list{
-        border: 1px solid yellow;
-        height: 100vh;
-        color: white; 
-    } */
-     
+    .list{
+       flex: 1;
+       width: 100%;
+       flex-wrap: wrap;
+    }
+      */
