--- a/src/components/Dashboard/list.module.css
+++ b/src/components/Dashboard/list.module.css
@@ -16,7 +16,7 @@
 .title input{
     margin-top: 10px;
     padding: 10px;
-    background-color: #a88335;
+    /* background-color: #a88335; */
     font-size: 10px;
     font-weight: bold;
     border: none;
@@ -27,14 +27,30 @@
   
   }
   .title button{
-    margin-left: 5px;
+    /* margin-left: 5px;
     padding: 10px 20px;
     background-color: #684700;
     color: rgb(18, 13, 13);
     font-size: 10px;
     border: none;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 4px; */
+    
+        cursor:pointer;
+        justify-content: center;
+        align-items: center;
+        border:none;
+        color:white;
+        width: 100px;
+        height: 35px;
+        margin-top: 10px;
+        margin-right: 10px;
+        padding: 5px;
+        border-radius: 5px;
+        background-color: rgb(54, 53, 53);
+        font-size:15px;
+    
+    
   }
   
   .boards {
@@ -42,8 +58,9 @@
       height: 100%;
       display: flex;
       justify-content: center;
-      background-image: url(https://cdn.pixabay.com/photo/2018/01/14/23/12/nature-3082832_1280.jpg);
       gap:30px;
+      justify-content: center;
+      text-align: center;
     }
     
     .board {
@@ -61,16 +78,45 @@
     }
     
     .list {
-      background-color: rgba(222, 205, 127, 0.5);
-      border-radius: 4px;
+      background-color: transparent;
+      border-radius: 10px;
       margin-bottom: 16px;
       padding: 12px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+      color: white;
+      margin-top: 10px;
+
     }
     
     .title {
       font-weight: bold;
       margin-bottom: 8px;
-      /* display: flex; */
       
+      padding: 10px;
+      width: 250px;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      
+    }
+    .mainlist{
+       
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+        text-align: center;
+        border-radius: 15px;
+        width: 200px;
+        /* border: 1px solid white; */
+        
+    }
+    .list_addnew{
+        background-color: transparent;
+        border-radius: 4px;
+        margin-bottom: 16px;
+        padding: -5px;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+        color: white;
+        border: 1px solid white; 
+        margin-top: 10px;
+        width: 150px;
     }
