--- a/src/components/Description/description.module.css
+++ b/src/components/Description/description.module.css
@@ -1,12 +1,13 @@
 .container {
-  background-color: rgb(188, 243, 188)!important;
-  /* position: absolute;
+  background-color: rgb(8, 5, 2)!important;
+  position: absolute;
   left: 35%;
   top: 150px;
-  z-index: -1; */
+  z-index: 1; 
   border-radius: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+   border:  rgba(222, 205, 127, 0.5);
 }
 
 .mainone {
@@ -17,6 +18,11 @@
 .cookblock span:nth-child(1) {
   font-size: large;
   font-weight: 700;
+}
+
+.RxCross2{
+  border: 1px solid red;
+  margin-top: 0px;
 }
 
 .first_second {
@@ -100,10 +106,24 @@
 .activity {
   font-size: larger;
 }
+.activity_list{
+  color:white;
+}
 .third_second {
   margin-top: 1rem;
   display: flex;
   justify-content: flex-end;
+}
+.profile{
+  background-color: orange;
+  height: 20px;
+  margin-right: 5px;
+  padding-top: 7px;
+  border-radius: 50%;
+  padding-left: 5px;
+padding-right: 5px;
+padding: 5px;
+margin-top: 12px;
 }
 .pr {
   background-color: orange;
@@ -153,6 +173,8 @@
 .item_time {
   
   display: flex;
+  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
+  rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
   flex-direction: row;
   justify-content: space-between;
   padding-left: 5px;
@@ -168,7 +190,6 @@
 }
 
 .timing_para {
-
   width: fit-content;
   margin-bottom: 0px;
   margin-left: 20px;
@@ -180,7 +201,7 @@
 
   margin-top: 0px;
   width: fit-content;
-  margin-left: 43px;
+  margin-left: 45px;
   color: rgb(73, 72, 72);
   font-size: 10px;
 }
