--- a/src/components/Dashboard/list.module.css
+++ b/src/components/Dashboard/list.module.css
@@ -1,160 +1,4 @@
-/* .List{
-   
-    border: 1px solid white;
-   width:max-content;
-   margin-left:px;
-    background-color: rgb(51, 45, 45);
-}
-.container{
-    display: flex;
-    flex-direction: row;
-    border:1px solid green;
-}
-.card{
-    border: 1px solid blue;
-} */
-/* .title input{
-    /* margin-top: 10px;
-    padding: 10px; */
-    /* background-color: #a88335; */
-    /* font-size: 10px;
-    font-weight: bold;
-    border: none;
-    border-radius: 4px;
-  }
-  .title button:hover{
-    background-color: #f4d592;
-  
-  }
-  .title button{ */
-    /* margin-left: 5px;
-    padding: 10px 20px;
-    background-color: #684700;
-    color: rgb(18, 13, 13);
-    font-size: 10px;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px; */
-    
-        /* cursor:pointer;
-        justify-content: center;
-        align-items: center;
-        border:none;
-        color:white;
-        width: 100px;
-        height: 35px;
-        margin-top: 10px;
-        margin-right: 10px;
-        padding: 5px;
-        border-radius: 5px;
-        background-color: rgb(54, 53, 53);
-        font-size:15px;
-    
-    
-  }
-  
-  .boards {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      gap:30px;
-      justify-content: center;
-      text-align: center;
-    }
-    
-    .board {
-      border-radius: 8px;
-      background-color: rgba(222, 205, 127, 0.5);
-      display: flex;
-      margin-top: 20px;
-      height: fit-content;
-      gap: 10px;
-      padding: 16px;
-    } */
-    
-    /* .add_board {
-      margin-bottom: 16px;
-    }
-    
-    .list {
-      background-color: transparent;
-      border-radius: 10px;
-      margin-bottom: 16px;
-      padding: 12px;
-      box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-      color: white;
-      margin-top: 10px;
 
-    }
-    
-    .title {
-      font-weight: bold;
-      margin-bottom: 8px;
-      
-      padding: 10px;
-      width: 250px;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      flex-direction: column;
-      
-    } */
-    /* .mainlist{
-       
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-        text-align: center;
-        border-radius: 15px;
-        width: 200px;
-        /* border: 1px solid white; */
-        
-    /* }
-    .list_addnew{
-        background-color: transparent;
-        border-radius: 4px;
-        margin-bottom: 16px;
-        padding: -5px;
-        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-        color: white;
-        border: 1px solid white; 
-        margin-top: 10px;
-        width: 150px;
-    }  */
-    /* .parent{
-        display: flex;
-        justify-content: flex-start;
-        gap: 10px;
-        overflow-x: scroll;   
-        
-    }
-    .parent::-webkit-scrollbar {
-        display: none;
-      }
-    .list{
-        display: flex;
-        min-width: 20%;
-        padding: 5%;  
-    }
-    
-    .parentList{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        max-height: auto;
-        background-color: rgba(110, 112, 109, 0.603);
-        border-radius: 5px;
-        padding: 1%;
-    }
-    .addCard{
-        margin-top: 10px;
-    }
-    .card{
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        gap: 10px;
-        cursor: pointer;
-    } */
     .title input{
       margin-top: 10px;
       padding: 10px;
@@ -169,14 +13,7 @@
     
     }
     .title button{
-      /* margin-left: 5px;
-      padding: 10px 20px;
-      background-color: #684700;
-      color: rgb(18, 13, 13);
-      font-size: 10px;
-      border: none;
-      cursor: pointer;
-      border-radius: 4px; */
+    
       
           cursor:pointer;
           justify-content: center;
@@ -261,4 +98,7 @@
           border: 1px solid white; 
           margin-top: 10px;
           width: 150px;
+          display: flex;
+          justify-content: space-between;
+
       }
