--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,33 @@
 .App{
-    background-image:  url(https://cdn.pixabay.com/photo/2018/01/14/23/12/nature-3082832_1280.jpg);
+   
     height: 100vh;
-    width: 100vw;
+    width: 97vw;
 }
+
+.backGround_btn{
+    cursor: pointer;
+    background: transparent;
+    border: 1px solid red;
+    position:absolute;
+    left:710px;
+    top:26px;
+    display: flex;
+    align-items: center;
+    background: transparent;
+    border-radius: 5px;
+    border: none;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 30px;
+    border-radius: 3px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+      rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+
+}
+.backGround_btn:hover {
+    cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  }
