--- a/src/components/Dashboard/list.module.css
+++ b/src/components/Dashboard/list.module.css
@@ -89,16 +89,17 @@
           
       }
       .list_addnew{
+        display:flex;
           background-color: transparent;
           border-radius: 4px;
           margin-bottom: 16px;
           padding: -5px;
+          padding-right: 5px;
           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
           color: white;
           border: 1px solid white; 
           margin-top: 10px;
-          width: 150px;
-          display: flex;
-          justify-content: space-between;
+          width: 230px;
+          
 
       }
