--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -4,10 +4,9 @@
     display: flex;
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
-      rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
-  
-      
+      rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;   
   }
+
   .leftSide_navbar {
     height: 80%;
     width: 19%;
@@ -15,9 +14,11 @@
     align-items: center;
     margin-left: 1%;
   }
+  
   .leftSide_navbar h1 {
-    font-size: 30px;
-    color: goldenrod;
+    font-size: 33px;
+    /* color: goldenrod; */
+    color:black
   }
   .IoStarOutline {
     margin-left: 10px;
@@ -85,17 +86,19 @@
   }
   
   .rightSide_navbar {
-    width: 53%;
+    width: 48%;
     height: 80%;
     margin-left: 50px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
   }
   
   .all_btns {
+   
     display: flex;
     align-items: center;
-    margin-left: 30px;
+    margin-left: 150px;
     justify-content: flex-end;
     cursor: pointer;
   }
@@ -128,7 +131,7 @@
     width: 30%;
     align-items: center;
     justify-content: center;
-    margin-left: 25px;
+    margin-left:20px;
     color: black;
   }
   
